make button fixed with div overflow scrollable

--- a/budgetView/client/src/pages/home_page/components/ExpenseBoard.css
+++ b/budgetView/client/src/pages/home_page/components/ExpenseBoard.css
@@ -1,6 +1,9 @@
 .expense-board {
   background-color: #fdb44b;
-  max-height: 38em;
+}
+#expense-card-container {
+  height: 100%;
+  max-height: 400px;
   overflow-y: scroll;
 }
 .expense-board h4 {
