--- a/budgetView/client/src/pages/home_page/components/IncomeBoard.css
+++ b/budgetView/client/src/pages/home_page/components/IncomeBoard.css
@@ -1,6 +1,9 @@
 .income-board {
   background-color: #fdb44b;
-  max-height: 60%;
+}
+#income-card-container {
+  height: 100%;
+  max-height: 500px;
   overflow-y: scroll;
 }
 .income-board h4 {
